--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "vue-project",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
+    "server:dev": "vite-ssr --open",
+    "server:build": "vite-ssr build && npm run move",
+    "server:build_deploy": "npm run build && npm run deploy",
     "test:unit": "vitest --environment jsdom"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "pinia": "^2.0.19",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
