--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "server:dev": "vite-ssr --open",
+    "server:dev": "node server-dev.js",
     "server:build": "vite-ssr build && npm run move",
     "server:build_deploy": "npm run build && npm run deploy",
     "test:unit": "vitest --environment jsdom"
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "express": "^4.18.1",
     "pinia": "^2.0.19",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
@@ -21,10 +20,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/test-utils": "^2.0.2",
+    "express": "^4.18.1",
     "glob": "^8.0.3",
     "jsdom": "^20.0.0",
     "sass": "^1.54.4",
+    "serialize-javascript": "^6.0.0",
     "vite": "^3.0.4",
+    "vite-plugin-html": "^3.2.0",
     "vitest": "^0.21.0"
   }
 }
