--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "server:build_deploy": "npm run build && npm run deploy",
     "test:unit": "vitest --environment jsdom",
     "build:client": "vite build --outDir dist/client --ssrManifest",
-    "build:server": "vite build --outDir dist/server --ssr src/entry-server.js "
+    "build:server": "vite build --outDir dist/server --ssr src/entry-server.js",
+    "build:server:noExternal": "vite build --config vite.config.noexternal.js --outDir dist/server --ssr src/entry-server.js",
+    "build:all": "npm run build:client && npm run build:server",
+    "serve": "node server",
+    "debug": "node --inspect-brk server"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -22,11 +26,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/test-utils": "^2.0.2",
+    "compression": "^1.7.4",
     "express": "^4.18.1",
     "glob": "^8.0.3",
     "jsdom": "^20.0.0",
     "sass": "^1.54.4",
     "serialize-javascript": "^6.0.0",
+    "serve-static": "^1.15.0",
     "vite": "^3.0.4",
     "vite-plugin-html": "^3.2.0",
     "vitest": "^0.21.0"
